# gepare

./: README.md  pyproject.toml
src/: gepare.py
test/: test_expander.py  test_gepare.py  test_git.py  test_hg.py  test_nd.py  test_toml.py  test_xdg.py  testutil.py
