[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "get-package-repositories"
version = "0.0.1"
description = "small utility to read sets of repositories"
license.text = "MIT License"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
    "Topic :: Software Development :: Version Control",
    "Typing :: Typed",
]

[project.scripts]
gepare = "gepare:main"

[project.urls]
repository = "https://codeberg.org/datatravelandexperiments/gepare"

[tool.coverage.run]
omit = ["/usr/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "class .*\\bProtocol\\)",
  "def __repr__\\(",
  "@abstractmethod",
]

[tool.mypy]
check_untyped_defs = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

[tool.pylint.basic]
argument-rgx = "[a-z_][a-z0-9_]*$"
attr-rgx = "[a-z_][a-z0-9_]*$"
class-rgx = "[A-Z_][A-Za-z0-9]*$"
const-rgx = "[A-Z_][A-Za-z0-9_]*$"
docstring-min-length = 12
function-rgx = "[a-z_][a-z0-9_]*$"
method-rgx = "[a-z_][a-z0-9_]*$"
no-docstring-rgx = "main|cmd_.*|test_.*|__.*|^_"
variable-rgx = "[a-z_][a-z0-9_]*$"

[tool.pylint.design]
max-args = 99
max-attributes = 99
max-branches = 99
max-locals  = 99
min-public-methods = 1
max-public-methods = 99
max-returns = 99
max-statements = 99

[tool.pylint.format]
max-line-length = 80

[tool.pylint."messages control"]
disable = [
    "bad-inline-option",
    "deprecated-pragma",
    "file-ignored",
    "locally-disabled",
    "raw-checker-failed",
    "suppressed-message",
    "too-few-public-methods",
    "unused-argument",
    "use-symbolic-message-instead",
    "useless-suppression",
]

[tool.pyright]
include = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "test"]
addopts = "--tb=native"

[tool.ruff]
src = ["src"]
line-length = 80
allowed-confusables = ["‘", "’", "–", "—"]
namespace-packages = ["test"]
select = ["ALL"]
ignore = [
    "ANN002",   # missing-type-args: Nah.
    "ANN003",   # missing-type-kwargs: Nah.
    "ANN101", 	# missing-type-self: Nah.
    "ANN102",   # missing-type-cls: Nah.
    "C901",     # complex-structure: Be direct.
    "D102",     # undocumented-public-method: Plan to fix eventually.
    "D103",     # undocumented-public-function: Plan to fix eventually.
    "D105",     # undocumented-magic-method: We know what they're for.
    "D107",     # undocumented-public-init: We know what it's for.
    "D203",     # one-blank-line-before-class: Conflicts with D211.
    "D212",     # multi-line-summary-first-line: Conflicts with D213.
    "ERA",      # eradicate: Complains about yapf: directives.
    "PLR0912",  # too-many-branches: Be direct.
    "PLR0913",  # too-many-arguments: Be direct.
    "PLR0915",  # too-many-statements: Be direct.
    "PLR2004",  # magic-value-comparison: Explicit is better.
    "S603",     # subprocess-without-shell-equals-true
    "T20",      # flake8-print: I like having output.
    "TD",       # TODOs
]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.isort]
lines-after-imports = 1
lines-between-types = 1

[tool.ruff.per-file-ignores]
"test_*.py" = [
    "ANN001", "ANN201", "ANN202", # test typing tbd
    "ARG001",   # pytest fixtures
    "PLC1901",  # testing for specific results
    "S101",     # assert
]

[tool.yapf]
based_on_style = "pep8"
allow_multiline_lambdas = true
allow_multiline_dictionary_keys = true
blank_lines_around_top_level_definition = 1
blank_lines_between_top_level_imports_and_variables = 1
coalesce_brackets = true
column_limit = 80
dedent_closing_brackets = false
indent_dictionary_value = true
join_multiple_lines = false
spaces_around_default_or_named_assign = false
spaces_around_subscript_colon = true
spaces_before_comment = 2
split_before_bitwise_operator = true
split_before_arithmetic_operator = true
split_before_dot = true
split_before_expression_after_opening_paren = true
split_complex_comprehension = true
